# synaptic

./: .gitignore  2  PLAN.MD  README.md  pyproject.toml
docs/: Overview.md  Overview.md.md  README.md  quickstart.md
docs/core/: agent.md  flows.md  memory.md  model.md  streaming-events.md  tool.md
docs/examples/: README.md  showcase.py
docs/providers/: gemini.md  index.md  openai.md
synaptic/: __init__.py
synaptic/agent/: __init__.py  agent.py  events.py  session.py
synaptic/core/: __init__.py  _factory.py  _runner.py  model.py  provider.py  tool.py
synaptic/core/base/: __init__.py  base_model.py  memory.py
synaptic/mcp/: __init__.py  hub.py  results.py  servers.py  session.py  tools.py
synaptic/providers/: __init__.py
synaptic/providers/claude/: __init__.py  helpers.py  model.py
synaptic/providers/deepseek/: __init__.py  model.py
synaptic/providers/gemini/: __init__.py  helpers.py  model.py
synaptic/providers/openai_/: __init__.py  helpers.py  model.py
synaptic/providers/together/: __init__.py  helpers.py  model.py
synaptic/providers/universal_openai/: __init__.py  model.py
synaptic/providers/vertex/: __init__.py  helpers.py  model.py
synaptic/providers/xai/: __init__.py  helpers.py  model.py
synaptic/run/: __init__.py  flow.py  retry.py
synaptic/signal/: __init__.py  collector.py  dsl.py  events.py
